# voco

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py  test_neutts.py
.github/workflows/: publish.yml
docs/: plugins.md  quickstart.md
examples/: cache_demo.py  generate_audio.py
plugins/voco-fishspeech/: README.md  pyproject.toml
plugins/voco-fishspeech/voco_fishspeech/: __init__.py  fishspeech_driver.py  pipeline.py  spliter.py
plugins/voco-fishspeech/voco_fishspeech/configs/: firefly_gan_vq.yaml
plugins/voco-fishspeech/voco_fishspeech/models/text2semantic/: llama.py
plugins/voco-fishspeech/voco_fishspeech/tools/llama/: generate.py
plugins/voco-fishspeech/voco_fishspeech/tools/vqgan/: inference.py
plugins/voco-fishspeech/voco_fishspeech/utils/: file.py
plugins/voco-kokoro/: pyproject.toml  readme.md
plugins/voco-kokoro/voco_kokoro/: __init__.py  kokoro_driver.py
plugins/voco-neutts/: README.md  pyproject.toml
plugins/voco-neutts/voco_neutts/: __init__.py  neutts_driver.py  pipeline.py
voco/core/: __init__.py  base_model.py  cache.py  config.py  device.py  registry.py  router.py
voco/core/plugin_loader/: __init__.py
