[project]
name = "voco"
version = "0.0.8"
description = "Modular audio model inference runtime with plugin architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.entry-points."voco.plugins"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voco*"]
exclude = ["kokoro*", "plugins*", "examples*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
