[project]
name = "voco-kokoro"
version = "0.0.1"
description = "Kokoro TTS plugin for VOCO audio inference runtime"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "voco>=0.0.1",
    "attrs",
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "scipy",
    "torch",
    "transformers",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voco_kokoro*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
