[project]
name = "voco-neutts"
version = "0.0.1"
description = "NeuTTS Air plugin for VOCO audio inference runtime"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "voco>=0.0.1",
    "librosa==0.11.0",
    "neucodec>=0.0.4",
    "numpy==2.2.6",
    "phonemizer==3.3.0",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "transformers==4.56.1",
    "resemble-perth==1.0.1",
    "huggingface_hub",
    "loguru",
]

[project.entry-points."voco.plugins"]
neutts = "voco_neutts"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voco_neutts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
